--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "idearium",
   "version": "0.1.0",
+  "homepage": "https://aidearium.github.io/Idearium/",
   "private": true,
   "dependencies": {
-    "lodash": "4.17.21",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
@@ -12,13 +12,18 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "3d-force-graph": "^1.70.10",
+    "gh-pages": "^4.0.0",
+    "lodash": "4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-force-graph": "^1.41.12",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
