--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "3d-force-graph": "^1.70.10",
-    "gh-pages": "^4.0.0",
     "lodash": "4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
