--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "3d-force-graph": "^1.70.10",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
     "framer-motion": "^7.3.5",
     "lodash": "^4.17.21",
+    "mongoose": "^6.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-force-graph": "^1.41.12",
