--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "idearium",
   "version": "0.1.0",
-  "homepage": "https://aidearium.github.io/Idearium/",
+  "homepage": "https://id3arium.github.io/Idearium/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "3d-force-graph": "^1.70.10",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "framer-motion": "^7.3.5",
     "lodash": "^4.17.21",
