--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   "dependencies": {
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "express": "^4.18.2",
+    "mongodb": "^4.12.1",
     "next": "13.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-force-graph": "^1.41.17",
+    "zustand": "^4.1.5"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
