--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-next": "13.0.5",
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
+    "mongoose": "^6.8.0",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
