--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.0.5",
     "express": "^4.18.2",
     "framer-motion": "^8.0.2",
+    "jotai": "^2.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
