--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "idearium",
-  "version": "0.1.0",
-  "homepage": "https://id3arium.github.io/Idearium",
+  "version": "0.2.0",
+  "homepage": "https://id3arium.github.io",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
