upgrading nextjs to 13.2.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
-    "next": "13.0.5",
+    "next": "^13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-force-graph": "^1.41.17",
