--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@prisma/client": "^4.12.0",
-    "3d-force-graph": "^1.70.19",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "express": "^4.18.2",
@@ -28,9 +27,10 @@
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
     "next": "^13.2.4",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-force-graph": "^1.41.17",
+    "react-force-graph-3d": "^1.23.0",
     "react-hotkeys-hook": "^4.3.7",
     "styled-components": "^5.3.6",
     "zustand": "^4.1.5"
