--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
     "next": "^13.2.4",
-    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-force-graph-3d": "^1.23.0",
+    "react-force-graph-3d": "1.21.10",
     "react-hotkeys-hook": "^4.3.7",
     "styled-components": "^5.3.6",
     "zustand": "^4.1.5"
