--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
+      "@/components/*": ["./public/components/*"],
       "@lib/*": ["./lib/*"],
     }
   }
