--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "@mui/material": "^5.11.2",
     "@prisma/client": "^4.12.0",
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
+    "eslint-config-next": "^13.4.7",
     "express": "^4.18.2",
     "framer-motion": "^8.0.2",
     "jotai": "^2.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
-    "next": "^13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-force-graph-3d": "1.21.10",
     "react-hotkeys-hook": "^4.3.7",
     "styled-components": "^5.3.6",
