--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,8 +41,8 @@
   "include": [
     "next-env.d.ts",
     ".next/types/**/*.ts",
-    "**/*.ts",
-    "**/*.tsx"
+    // "**/*.ts",
+    // "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
