--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "eslint": "8.28.0",
     "eslint-config-next": "^13.4.7",
     "express": "^4.18.2",
-    "framer-motion": "^10.16.2",
     "jotai": "^2.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
+    "motion": "^10.16.2",
     "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
