--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "^13.4.7",
     "express": "^4.18.2",
+    "framer-motion": "^10.16.2",
     "jotai": "^2.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^4.12.1",
@@ -30,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-force-graph-3d": "1.21.10",
+    "react-hotkeys": "^2.0.0",
     "react-hotkeys-hook": "^4.3.7",
     "styled-components": "^5.3.6",
     "zustand": "^4.1.5"
