--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@prisma/client": "^4.12.0",
+    "bson": "5.4.0",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.4.7",
     "express": "^4.18.2",
@@ -26,7 +27,6 @@
     "lodash": "^4.17.21",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
-    "motion": "^10.16.2",
     "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
