--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
+    "@preact/signals-react": "^1.3.6",
     "@prisma/client": "^4.12.0",
     "bson": "5.4.0",
     "eslint": "8.28.0",
@@ -29,6 +30,7 @@
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
     "next": "^13.4.7",
+    "preact": "^10.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-force-graph-3d": "1.21.10",
