--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@clerk/nextjs": "^4.28.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.11.0",
@@ -36,6 +37,7 @@
     "react-hotkeys": "^2.0.0",
     "react-hotkeys-hook": "^4.3.7",
     "styled-components": "^5.3.6",
+    "tailwindcss": "^3.4.0",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
