--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "react-hotkeys": "^2.0.0",
     "react-hotkeys-hook": "^4.3.7",
     "styled-components": "^5.3.6",
-    "tailwindcss": "^3.4.0",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "gh-pages": "^4.0.0",
-    "prisma": "^4.12.0"
+    "postcss": "^8.4.33",
+    "prisma": "^4.12.0",
+    "tailwindcss": "^3.4.1"
   }
 }
