--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@clerk/nextjs": "^4.28.1",
+    "@clerk/themes": "^1.7.9",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.11.0",
