--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
       "@/components/*": ["./public/components/*"],
       "@/lib/*": ["./lib/*"],
       "@/utils/*": ["./lib/utils/*"],
+      "@/app/*": ["./app/*"],
     }
   }
 }
