--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/themes": "^1.7.9",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@prisma/client": "^4.12.0",
