--- a/package.json
+++ b/package.json
@@ -1,51 +1,46 @@
 {
   "name": "idearium",
-  "version": "0.3.0",
-  "homepage": "https://id3arium.github.io",
   "private": true,
+  "sideEffects": false,
+  "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "export": "next export",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "remix build",
+    "dev": "remix dev --manual",
+    "start": "remix-serve ./build/index.js",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.4",
-    "@clerk/nextjs": "^4.28.1",
+    "@clerk/remix": "^3.1.0",
     "@clerk/themes": "^1.7.9",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@material-tailwind/react": "^2.1.9",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.2",
-    "@prisma/client": "^4.12.0",
-    "bson": "5.4.0",
-    "eslint": "8.28.0",
-    "eslint-config-next": "^13.4.7",
-    "express": "^4.18.2",
-    "framer-motion": "^10.16.2",
-    "jotai": "^2.0.2",
-    "jotai-signal": "^0.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.7.0",
+    "@remix-run/css-bundle": "^2.3.1",
+    "@remix-run/node": "^2.3.1",
+    "@remix-run/react": "^2.3.1",
+    "@remix-run/serve": "^2.3.1",
+    "framer-motion": "^10.16.16",
+    "isbot": "^3.6.8",
+    "jotai": "^2.6.0",
     "lodash": "^4.17.21",
-    "mongodb": "^4.12.1",
-    "mongoose": "^6.8.0",
-    "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-force-graph-3d": "1.21.10",
+    "react-force-graph-3d": "^1.24.1",
     "react-hotkeys": "^2.0.0",
-    "react-hotkeys-hook": "^4.3.7",
-    "styled-components": "^5.3.6",
-    "zustand": "^4.1.5"
+    "remix-utils": "^7.3.0",
+    "three": "^0.159.0"
   },
   "devDependencies": {
+    "@remix-run/dev": "^2.3.1",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.16",
-    "gh-pages": "^4.0.0",
-    "postcss": "^8.4.33",
-    "prisma": "^4.12.0",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.32",
+    "prisma": "^5.7.0",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.1.6"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
